--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
             <div class=contactInfo>
                 <img src="assets/images/Location.jpg" alt="credit: Teewara Soontorn for TheNounProject.com"> <p>Seattle, Washington</p>
-                <img src="assets/images/EMAIL.jpg" alt="credit: Icon Fair for TheNounProject.com"> <p>troyat88@gmail.com</p><span>
+                <img src="assets/images/EMAIL.jpg" alt="credit: Icon Fair for TheNounProject.com"> <p>troyat88@gmail.com</p>
                 <img src="assets/images/phone.jpg" alt="credit: Gregor Cresnor for TheNounProject.com"> <p>956-525-9865</p>
             </div>
         
