--- a/index.html
+++ b/index.html
@@ -87,25 +87,25 @@
                 <h3>Find My Plate</h3>
                 <div class="grow">
                 <p><a href="https://troyat88.github.io/Find-My-Plate/" target="_blank">
-                <img class="hover" src="assets/images/Screenshot copy.png" alt="credit: Becris for TheNounProject.com"></a></p>
+                <img class="hover" src="assets/images/Screenshot copy.png" alt="screenshot of Find My Plate application"></a></p>
                 <caption>An easy to use application that allows users to find dining options in their current area or zip-code, search by cuisine, and search menus.</caption>
                 </div>
 
             </div> 
             <div class="project">
-                <h3>Weather Dashboard</h3>
+                <h3>Your Forum</h3>
                 <div class="grow">
-                <p><a href="https://troyat88.github.io/Weather-Dashboard/" target="_blank">
-                <img class="hover" src="assets/images/Weather-Screenshot.png" alt="credit: Cattaleeya Thongsriphone for TheNounProject.com"></a></p>
-                <caption>A dashboard where viewers can view weather conditions and a forecast by city.</caption>
+                <p><a href="https://pacific-journey-91002.herokuapp.com/LoginRegister" target="_blank">
+                <img class="hover" src="assets/images/YourForum.png" alt="screenshot of Your Forum application"></a></p>
+                <caption>A public discussion forum where users can create groups, topics, and email invites for participants.</caption>
                 </div>
             </div>
             <div class="project">
-                <h3>Work-day Planner</h3>
+                <h3>Weather Dashboard</h3>
                 <div class="grow">
-                <p><a href="https://troyat88.github.io/work-day-scheduler/" target="_blank">
-                <img class="hover" src="assets/images/CalendarScreenShot.jpg" alt="credit: Putu Kharismayadi for TheNounProject.com"></a></p>
-                <caption>An application that allows the user to add and save events to a 12-hour schedule.</caption>
+                <p><a href="https://troyat88.github.io/Weather-Dashboard/" target="_blank">
+                <img class="hover" src="assets/images/Weather-Screenshot.png" alt="screenshot of Weather Dashboard application"></a></p>
+                <caption>A dashboard where viewers can view weather conditions and a forecast by city.</caption>
                 </div>
             </div>
     
